# och8S

./: README.md  TODO.md  flake.nix  foo  justfile  meson.build
.ccls-cache/@@home@kutu@documents@dev@och8S/: @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@__stddef_max_align_t.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@__wmmintrin_aes.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@__wmmintrin_pclmul.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@adxintrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@amxintrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@avx2intrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@avx512bf16intrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@avx512bitalgintrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@avx512bwintrin.h.blob  @nix@store@4lwagbk692wa0as70arfqh1rrbq9wsqk-clang-14.0.6-lib@lib@clang@14.0.6@include@avx512cdintrin.h.blob  (+217 more)
.ccls-cache/@home@kutu@documents@dev@och8S/: src@keys.c  (+12 more)
include/: audio.h  keys.h  logging.h  opcodes.h  render.h  save-state.h  virtual-machine.h
src/: .syncthing.meson.build.tmp  audio.c  keys.c  logging.c  main.c  meson.build  opcodes.c  render.c  save-state.c  virtual-machine.c
(+2 files in other folders)
